// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom results class 1`] = `
<div
  className="typeahead-selector foo"
>
  <div
    className="header"
  >
    
  </div>
  <ul />
</div>
`;

exports[`Default render of selector 1`] = `
<div
  className="typeahead-selector"
>
  <div
    className="header"
  >
    
  </div>
  <ul />
</div>
`;

exports[`Header label rendered 1`] = `
<div
  className="typeahead-selector"
>
  <div
    className="header"
  >
    header foo
  </div>
  <ul />
</div>
`;

exports[`List of options rendered 1`] = `
<div
  className="typeahead-selector"
>
  <div
    className="header"
  >
    
  </div>
  <ul>
    <li
      className="filter-tokenizer-list__item"
      onClick={[Function]}
    >
      <a
        className="typeahead-option filter-tokenizer-list__item"
      >
        foo
      </a>
    </li>
    <li
      className="filter-tokenizer-list__item"
      onClick={[Function]}
    >
      <a
        className="typeahead-option filter-tokenizer-list__item"
      >
        bar
      </a>
    </li>
    <li
      className="filter-tokenizer-list__item"
      onClick={[Function]}
    >
      <a
        className="typeahead-option filter-tokenizer-list__item"
      >
        baz
      </a>
    </li>
  </ul>
</div>
`;
